--- a/index.html
+++ b/index.html
@@ -121,16 +121,16 @@
             "",
             "Are you Sure?",
             "Really Sure?",
-            "Think Again..",
-            "Last Chance!",
+            "Grrr Try Again..",
+            "grrrrrrrrrrrrr",
             "Surely not?",
             "You Might Regret this?",
-            "Give it another thought!",
+            "Areyyyyy give it another thought!",
             "This Could be a mistake!",
-            "Don't be so cold",
+            " Ja baba don't be so cold",
             "Wouldn't you reconsider?",
             "Is that your Final answer?",
-            "You're breaking my heart :(",
+            "heeeh u're breaking my heart :(",
           ],
           confirmationMessages: [
             "Are you sure?",
