--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Do you love me?</title>
+    <title>I love you Mimi</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
@@ -71,7 +71,7 @@
       class="center-screen"
       style="display: flex; flex-direction: column"
     >
-      <h1>Will You Be Mine mimi?
+      <h1>Will You Be Mine Mimi?
       My sunshine</h1>
       <img
         src="https://i.postimg.cc/DZkw7g5n/output-onlinegiftools.gif"
@@ -109,9 +109,7 @@
         </button>
       </div>
     </div>
-    <p class="mainn">
-      <a href="https://www.instagram.com/untoldcoding/">Made by UntoldCoding</a>
-    </p>
+    
     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
     <script>
       new Vue({
